Patched geosearch plugin to limit zoom level when bounds undefined.  Also fixed IE8 warning and UI issues on small screens.

--- a/assets/main.css
+++ b/assets/main.css
@@ -34,7 +34,12 @@ html, body, #map {
     padding-left: 0.5em;
 }
 
+.leaflet-control { clear: none; }
+
 /* Alterations to the Map Layers Control */
+.leaflet-control-layers-expanded {
+    overflow-y: scroll;
+}
 .leaflet-control-layers-title {
     background-image: url(leaflet-0.7.3/css/images/layers-2x.png);
     background-position: 10px 50%;
@@ -43,34 +48,37 @@ html, body, #map {
     height: 36px;
     font-size: 1.3em;
     margin-top: 0;
-    margin-bottom: 5px;
+    margin-bottom: 0;
 }
 .leaflet-control-layers-title>span {
     padding-left: 46px;
     line-height: 36px;
 }
-.leaflet-control-layers-base>label {
-    padding-left: .5em;
-}
 .leaflet-control-layers-section-name {
     background-color:rgb(229, 229, 229);
     border-bottom: 1px solid rgb(159, 159, 159);
     width: 100%;
-    padding: 3px 10px 5px 6px;
-    margin: 10px -10px 5px -6px;
+    padding: 1px 10px 3px 6px;
+    margin: 5px -10px 5px -6px;
 }
 .leaflet-control-layers-section-name>h4 {
     font-size: 1.2em;
     display: inline-block;
     margin: 0;
 }
+.leaflet-control-layers-base>label {
+    padding-left: .5em;
+}
+.leaflet-control-layers-group {
+    margin-bottom: 3px;
+}
 .leaflet-control-layers-group-name {
     width: 100%;
     font-size: 1.2em;
     border-bottom: 1px solid rgb(159, 159, 159);
     padding-bottom: 1px;
-    margin-bottom: 6px;
-    margin-top: 8px;
+    margin-bottom: 2px;
+    margin-top: 2px;
 }
 .bulk-select-overlays {
     display: inline-block;
@@ -115,6 +123,15 @@ button.unselect-all-overlays {
     background-color: #dc143c;
 }
 
+/* Alterations to placement of Zoom controls */
+#zoomcontrols {
+    clear: none;
+    float: left;
+}
+#zoomcontrols>.leaflet-control {
+    clear:both;
+}
+
 /* Alterations to the Locate Control */
 div.leaflet-control-locate a.leaflet-bar-part-single {
     width: auto;
@@ -149,7 +166,7 @@ div.leaflet-control-locate a.leaflet-bar-part-single span.fa {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 5px 0px;
     clear: both;
     display: block;
-    float: right;
+    float: left;
     font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
     font-size: 12px;
     line-height: 18px;
@@ -158,6 +175,7 @@ div.leaflet-control-locate a.leaflet-bar-part-single span.fa {
     padding: 10px;
     color: #333;
     min-width: 100px;
+    /* max-width: 120px; */
     vertical-align: top;
 }
 .leaflet-control.choropleth-legend strong {
@@ -190,6 +208,7 @@ div.leaflet-control-locate a.leaflet-bar-part-single span.fa {
     padding: 10px;
     color: #333;
     min-width: 100px;
+    max-width: 150px;
     vertical-align: top;
 }
 .leaflet-control.choropleth-display strong {
